fixed some linking problems

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="brand">
           <img src="/assets/icons/brand.png" alt="brand icon" />
           <span class="vertical-line"></span>
-          <a href="#">وبسایت فروشگاهی</a>
+          <a href="/">وبسایت فروشگاهی</a>
         </div>
       </div>
       <div class="section-2">
@@ -68,7 +68,7 @@
             </button>
           </div>
           <div class="brand">
-            <a class="special" href="#">
+            <a class="special" href="/">
               <img src="/assets/icons/brand.png" alt="" />
               <h1>وبسایت فروشگاهی</h1>
             </a>
@@ -132,7 +132,7 @@
         <div class="section-2">
           <div class="navbar">
             <nav>
-              <a href="#home">
+              <a href="/">
                 <img src="/assets/icons/house.png" alt="">
                 <span>خانه</span>
               </a>
@@ -656,7 +656,7 @@
       <footer>
         <div class="side-right">
           <div class="brand">
-            <a class="special" href="#">
+            <a class="special" href="/">
               <img src="/assets/icons/brand.png" alt="">
               <span class="vertical-line"></span>
               <h1>وبسایت فروشگاهی</h1>
