--- a/pages/cart.html
+++ b/pages/cart.html
@@ -20,7 +20,7 @@
         <div class="brand">
           <img src="/assets/icons/brand.png" alt="brand icon" />
           <span class="vertical-line"></span>
-          <a href="#">وبسایت فروشگاهی</a>
+          <a href="/">وبسایت فروشگاهی</a>
         </div>
       </div>
       <div class="section-2">
@@ -39,11 +39,11 @@
           </a>
         </div>
         <div class="navbar">
-          <a href="#home">
+          <a href="/">
             <img src="/assets/icons/house.png" alt="" />
             <span>خانه</span>
           </a>
-          <a href="#products">
+          <a href="/pages/products.html">
             <img src="/assets/icons/product.png" alt="" />
             <span>محصولات</span>
           </a>
@@ -117,7 +117,7 @@
           </div>
           <div class="user-actions">
             <div class="action-links">
-              <a class="action-link" href="#favorites">
+              <a class="action-link" href="/pages/favorites.html">
                 <img src="/assets/icons/heart.png" alt="" />
               </a>
               <a class="action-link" href="/pages/cart.html">
@@ -135,7 +135,7 @@
         <div class="section-2">
           <div class="navbar">
             <nav>
-              <a href="#home">
+              <a href="/">
                 <img src="/assets/icons/house.png" alt="" />
                 <span>خانه</span>
               </a>
