--- a/pages/favorites.html
+++ b/pages/favorites.html
@@ -20,7 +20,7 @@
         <div class="brand">
           <img src="/assets/icons/brand.png" alt="brand icon" />
           <span class="vertical-line"></span>
-          <a href="#">وبسایت فروشگاهی</a>
+          <a href="/">وبسایت فروشگاهی</a>
         </div>
       </div>
       <div class="section-2">
@@ -33,13 +33,13 @@
             <img src="/assets/icons/cart.png" alt="">
             <span>سبد خرید</span>
           </a>
-          <a href="#favorites">
+          <a href="/pages/favorites.html">
             <img src="/assets/icons/heart.png" alt="">
             <span>علاقه مندی ها</span>
           </a>
         </div>
         <div class="navbar">
-          <a href="#home">
+          <a href="/">
             <img src="/assets/icons/house.png" alt="">
             <span>خانه</span>
           </a>
@@ -67,7 +67,7 @@
             </button>
           </div>
           <div class="brand">
-            <a class="special" href="#">
+            <a class="special" href="/">
               <img src="/assets/icons/brand.png" alt="" />
               <h1>وبسایت فروشگاهی</h1>
             </a>
@@ -113,7 +113,7 @@
           </div>
           <div class="user-actions">
             <div class="action-links">
-              <a class="action-link" href="#favorites">
+              <a class="action-link" href="/pages/favorites.html">
                 <img src="/assets/icons/heart.png" alt="" />
               </a>
               <a class="action-link" href="/pages/cart.html">
@@ -131,11 +131,11 @@
         <div class="section-2">
           <div class="navbar">
             <nav>
-              <a href="#home">
+              <a href="/">
                 <img src="/assets/icons/house.png" alt="">
                 <span>خانه</span>
               </a>
-              <a href="#products">
+              <a href="/pages/products.html">
                 <img src="/assets/icons/product.png" alt="">
                 <span>محصولات</span>
               </a>
@@ -261,7 +261,7 @@
       <footer>
         <div class="side-right">
           <div class="brand">
-            <a class="special" href="#">
+            <a class="special" href="/">
               <img src="/assets/icons/brand.png" alt="">
               <span class="vertical-line"></span>
               <h1>وبسایت فروشگاهی</h1>
