--- a/pages/products.html
+++ b/pages/products.html
@@ -21,7 +21,7 @@
         <div class="brand">
           <img src="/assets/icons/brand.png" alt="brand icon" />
           <span class="vertical-line"></span>
-          <a href="#">وبسایت فروشگاهی</a>
+          <a href="/">وبسایت فروشگاهی</a>
         </div>
       </div>
       <div class="section-2">
@@ -40,11 +40,11 @@
           </a>
         </div>
         <div class="navbar">
-          <a href="#home">
+          <a href="/">
             <img src="/assets/icons/house.png" alt="" />
             <span>خانه</span>
           </a>
-          <a href="#products">
+          <a href="/pages/products.html">
             <img src="/assets/icons/product.png" alt="" />
             <span>محصولات</span>
           </a>
@@ -68,7 +68,7 @@
             </button>
           </div>
           <div class="brand">
-            <a class="special" href="#">
+            <a class="special" href="/">
               <img src="/assets/icons/brand.png" alt="" />
               <h1>وبسایت فروشگاهی</h1>
             </a>
@@ -136,7 +136,7 @@
         <div class="section-2">
           <div class="navbar">
             <nav>
-              <a href="#home">
+              <a href="/">
                 <img src="/assets/icons/house.png" alt="" />
                 <span>خانه</span>
               </a>
@@ -348,7 +348,7 @@
       <footer>
         <div class="side-right">
           <div class="brand">
-            <a class="special" href="#">
+            <a class="special" href="/">
               <img src="/assets/icons/brand.png" alt="" />
               <span class="vertical-line"></span>
               <h1>وبسایت فروشگاهی</h1>
