implemented the support page

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <img src="/assets/icons/product.png" alt="">
             <span>محصولات</span>
           </a>
-          <a href="#support">
+          <a href="/pages/support.html">
             <img src="/assets/icons/support.png" alt="">
             <span>پشتیبانی</span>
           </a>
@@ -140,7 +140,7 @@
                 <img src="/assets/icons/product.png" alt="">
                 <span>محصولات</span>
               </a>
-              <a href="#support">
+              <a href="/pages/support.html">
                 <img src="/assets/icons/support.png" alt="">
                 <span>پشتیبانی</span>
               </a>
