--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
           <div class="swiper">
             <div class="swiper-button-prev"></div>
             <div class="swiper-wrapper">
-              <div class="swiper-slide" style="background-color: red;">
+              <div class="swiper-slide" style="background-color: #FF6B6B;">
                 <a href="#electronics-category">
                   <img src="/assets/images/electronics.jpg" alt="">
                   <div class="details">
@@ -365,7 +365,7 @@
                   </div>
                 </a>
               </div>
-              <div class="swiper-slide" style="background-color: yellow;">
+              <div class="swiper-slide" style="background-color: green;">
                 <a href="#electronics-category">
                   <img src="/assets/images/electronics.jpg" alt="">
                   <div class="details">
@@ -374,7 +374,7 @@
                   </div>
                 </a>
               </div>
-              <div class="swiper-slide" style="background-color: lightblue;">
+              <div class="swiper-slide" style="background-color: #b9c737;">
                 <a href="#electronics-category">
                   <img src="/assets/images/electronics.jpg" alt="">
                   <div class="details">
@@ -383,7 +383,7 @@
                   </div>
                 </a>
               </div>
-              <div class="swiper-slide" style="background-color: brown;">
+              <div class="swiper-slide" style="background-color: #4D96FF;">
                 <a href="#electronics-category">
                   <img src="/assets/images/electronics.jpg" alt="">
                   <div class="details">
@@ -392,7 +392,7 @@
                   </div>
                 </a>
               </div>
-              <div class="swiper-slide" style="background-color: seagreen;">
+              <div class="swiper-slide" style="background-color: rgb(31, 188, 228);">
                 <a href="#electronics-category">
                   <img src="/assets/images/electronics.jpg" alt="">
                   <div class="details">
@@ -401,7 +401,7 @@
                   </div>
                 </a>
               </div>
-              <div class="swiper-slide" style="background-color: violet;">
+              <div class="swiper-slide" style="background-color: teal;">
                 <a href="#electronics-category">
                   <img src="/assets/images/electronics.jpg" alt="">
                   <div class="details">
@@ -410,7 +410,7 @@
                   </div>
                 </a>
               </div>
-              <div class="swiper-slide" style="background-color: wheat;">
+              <div class="swiper-slide" style="background-color: burlywood;">
                 <a href="#electronics-category">
                   <img src="/assets/images/electronics.jpg" alt="">
                   <div class="details">
