implemented the about us page

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <img src="/assets/icons/support.png" alt="">
             <span>پشتیبانی</span>
           </a>
-          <a href="#about-us">
+          <a href="/pages/about-us.html">
             <img src="/assets/icons/about-us.png" alt="">
             <span>درباره ما</span>
           </a>
@@ -144,7 +144,7 @@
                 <img src="/assets/icons/support.png" alt="">
                 <span>پشتیبانی</span>
               </a>
-              <a href="#about-us">
+              <a href="/pages/about-us.html">
                 <img src="/assets/icons/about-us.png" alt="">
                 <span>درباره ما</span>
               </a>
