implemented a image viewer for images list

--- a/pages/product.html
+++ b/pages/product.html
@@ -58,6 +58,10 @@
         </div>
       </div>
     </div>
+    <div class="image-viewer">
+      <img src="/assets/images/croma.png" alt="">
+      <button class="close-image-btn">بستن</button>
+    </div>
     <div class="main">
       <header>
         <div class="section-1">
@@ -166,13 +170,13 @@
                 <img src="/assets/images/croma.png" alt="">
               </div>
               <div class="images-list">
-                <button class="image">
+                <button class="image-btn">
                   <img src="/assets/images/croma.png" alt="">
                 </button>
-                <button class="image">
+                <button class="image-btn">
                   <img src="/assets/images/croma.png" alt="">
                 </button>
-                <button class="image">
+                <button class="image-btn">
                   <img src="/assets/images/croma.png" alt="">
                 </button>
               </div>
@@ -237,5 +241,6 @@
       </footer>
     </div>
     <script src="/scripts/global.js"></script>
+    <script src="/scripts/product.js"></script>
   </body>
 </html>
