the specifications section was created and some of problems that prevented the specifications section from being wel were also resolved

--- a/pages/product.html
+++ b/pages/product.html
@@ -223,6 +223,39 @@
               <img src="/assets/icons/caret.png" alt="">
             </button>
           </div>
+          <div class="specifications">
+            <h5>مشخصات</h5>
+            <div class="specification-rows">
+              <div class="specification-row">
+                <span class="property">برند</span>
+                <span class="value">کروما</span>
+              </div>
+              <div class="specification-row">
+                <span class="property">شماره مدل</span>
+                <span class="value">CREEH1904sHPA4</span>
+              </div>
+              <div class="specification-row">
+                <span class="property">پشتیبانی از بلوتوث</span>
+                <span class="value">بله</span>
+              </div>
+              <div class="specification-row">
+                <span class="property">نسخه بلوتوث</span>
+                <span class="value">بلوتوث ۵.۰</span>
+              </div>
+              <div class="specification-row">
+                <span class="property">ظرفیت باتری</span>
+                <span class="value">۴۰۰ میلی آمپر بر ساعت</span>
+              </div>
+              <div class="specification-row">
+                <span class="property">سری مدل</span>
+                <span class="value">CREEH1904sHPA4</span>
+              </div>
+              <div class="specification-row">
+                <span class="property">دستگاه های سازگار</span>
+                <span class="value">تبلت, تلفن های همراه</span>
+              </div>
+            </div>
+          </div>
         </section>
       </main>
       <footer>
