created rate and submit comment section in product page

--- a/pages/product.html
+++ b/pages/product.html
@@ -257,6 +257,17 @@
             </div>
           </div>
         </section>
+        <section class="comments">
+          <div class="rate-and-submit-comment">
+            <div class="rate">
+              <img src="/assets/icons/star.png" alt="">
+              <span class="rate-number">۵.۰</span>
+            </div>
+            <span class="comments-number">از مجموع ۲۴ نظر</span>
+            <p>شما هم نظر خود را ثبت کنید!</p>
+            <button class="write-comment-btn">نوشتن نظر</button>
+          </div>
+        </section>
       </main>
       <footer>
         <div class="side-right">
