created the comments list section in product page

--- a/pages/product.html
+++ b/pages/product.html
@@ -257,7 +257,7 @@
             </div>
           </div>
         </section>
-        <section class="comments">
+        <section class="comments-section">
           <div class="rate-and-submit-comment">
             <div class="rate">
               <img src="/assets/icons/star.png" alt="">
@@ -266,6 +266,126 @@
             <span class="comments-number">از مجموع ۲۴ نظر</span>
             <p>شما هم نظر خود را ثبت کنید!</p>
             <button class="write-comment-btn">نوشتن نظر</button>
+          </div>
+          <div class="comments">
+            <h5>نظرات</h5>
+            <div class="comments-list">
+              <div class="comment">
+                <div class="name">
+                  <img src="/assets/icons/person.png" alt="">
+                  <h6>آرش راستگو</h6>
+                </div>
+                <div class="rate">
+                  <img src="/assets/icons/star.png" alt="">
+                  <span class="rate-number">۵.۰</span>
+                </div>
+                <p class="comment-text">این هدفون کیفیت صدای قابل قبولی داره ولی یه مشکلی که داره اینه که بلوتوثش گاهی اوقات اذیت میکنه و وصل نمیشه</p>
+                <ul class="positive-points">
+                  <li>
+                    <img src="/assets/icons/plus-green.png" alt="">
+                    <span>کیفیت صدا قابل قبول</span>
+                  </li>
+                </ul>
+                <ul class="negetive-points">
+                  <li>
+                    <img src="/assets/icons/minus-red.png" alt="">
+                    <span>مشکل در بلوتوث</span>
+                  </li>
+                </ul>
+              </div>
+              <div class="comment">
+                <div class="name">
+                  <img src="/assets/icons/person.png" alt="">
+                  <h6>آرش راستگو</h6>
+                </div>
+                <div class="rate">
+                  <img src="/assets/icons/star.png" alt="">
+                  <span class="rate-number">۵.۰</span>
+                </div>
+                <p class="comment-text">این هدفون کیفیت صدای قابل قبولی داره ولی یه مشکلی که داره اینه که بلوتوثش گاهی اوقات اذیت میکنه و وصل نمیشه</p>
+                <ul class="positive-points">
+                  <li>
+                    <img src="/assets/icons/plus-green.png" alt="">
+                    <span>کیفیت صدا قابل قبول</span>
+                  </li>
+                </ul>
+                <ul class="negetive-points">
+                  <li>
+                    <img src="/assets/icons/minus-red.png" alt="">
+                    <span>مشکل در بلوتوث</span>
+                  </li>
+                </ul>
+              </div>
+              <div class="comment">
+                <div class="name">
+                  <img src="/assets/icons/person.png" alt="">
+                  <h6>آرش راستگو</h6>
+                </div>
+                <div class="rate">
+                  <img src="/assets/icons/star.png" alt="">
+                  <span class="rate-number">۵.۰</span>
+                </div>
+                <p class="comment-text">این هدفون کیفیت صدای قابل قبولی داره ولی یه مشکلی که داره اینه که بلوتوثش گاهی اوقات اذیت میکنه و وصل نمیشه</p>
+                <ul class="positive-points">
+                  <li>
+                    <img src="/assets/icons/plus-green.png" alt="">
+                    <span>کیفیت صدا قابل قبول</span>
+                  </li>
+                </ul>
+                <ul class="negetive-points">
+                  <li>
+                    <img src="/assets/icons/minus-red.png" alt="">
+                    <span>مشکل در بلوتوث</span>
+                  </li>
+                </ul>
+              </div>
+              <div class="comment">
+                <div class="name">
+                  <img src="/assets/icons/person.png" alt="">
+                  <h6>آرش راستگو</h6>
+                </div>
+                <div class="rate">
+                  <img src="/assets/icons/star.png" alt="">
+                  <span class="rate-number">۵.۰</span>
+                </div>
+                <p class="comment-text">این هدفون کیفیت صدای قابل قبولی داره ولی یه مشکلی که داره اینه که بلوتوثش گاهی اوقات اذیت میکنه و وصل نمیشه</p>
+                <ul class="positive-points">
+                  <li>
+                    <img src="/assets/icons/plus-green.png" alt="">
+                    <span>کیفیت صدا قابل قبول</span>
+                  </li>
+                </ul>
+                <ul class="negetive-points">
+                  <li>
+                    <img src="/assets/icons/minus-red.png" alt="">
+                    <span>مشکل در بلوتوث</span>
+                  </li>
+                </ul>
+              </div>
+              <div class="comment">
+                <div class="name">
+                  <img src="/assets/icons/person.png" alt="">
+                  <h6>آرش راستگو</h6>
+                </div>
+                <div class="rate">
+                  <img src="/assets/icons/star.png" alt="">
+                  <span class="rate-number">۵.۰</span>
+                </div>
+                <p class="comment-text">این هدفون کیفیت صدای قابل قبولی داره ولی یه مشکلی که داره اینه که بلوتوثش گاهی اوقات اذیت میکنه و وصل نمیشه</p>
+                <ul class="positive-points">
+                  <li>
+                    <img src="/assets/icons/plus-green.png" alt="">
+                    <span>کیفیت صدا قابل قبول</span>
+                  </li>
+                </ul>
+                <ul class="negetive-points">
+                  <li>
+                    <img src="/assets/icons/minus-red.png" alt="">
+                    <span>مشکل در بلوتوث</span>
+                  </li>
+                </ul>
+              </div>
+            </div>
           </div>
         </section>
       </main>
