created a box for write comment in product page

--- a/pages/product.html
+++ b/pages/product.html
@@ -58,6 +58,39 @@
         </div>
       </div>
     </div>
+    <div class="submit-comment-box">
+      <div class="box">
+        <div class="header">
+          <h5>ثبت نظر</h5>
+          <button class="close-box">
+            <img src="/assets/icons/close.png" alt="">
+          </button>
+        </div>
+        <div class="main">
+          <label for="comment-text">نظر شما</label>
+          <textarea name="" id="comment-text" rows="10" placeholder="نظر خود را بنویسید..."></textarea>
+          <label for="positive-points">نکات مثبت</label>
+          <div class="positive-points">
+            <div class="input">
+              <input type="text" id="positive-points" placeholder="نکته مثبت خود را بنویسید...">
+              <button>ثبت</button>
+            </div>
+            <ul></ul>
+          </div>
+          <label for="negetive-points">نکات منفی</label>
+          <div class="negetive-points">
+            <div class="input">
+              <input type="text" id="negetive-points" placeholder="نکته منفی خود را بنویسید...">
+              <button>ثبت</button>
+            </div>
+            <ul></ul>
+          </div>
+          <label for="rate">امتیاز</label>
+          <input type="number" id="rate" min="0" max="5" step="0.1">
+          <button>ثبت نظر</button>
+        </div>
+      </div>
+    </div>
     <div class="image-viewer">
       <img src="/assets/images/croma.png" alt="">
       <button class="close-image-btn">بستن</button>
