--- a/pages/product.html
+++ b/pages/product.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش، مشکی)</title>
     <link rel="icon" type="image/x-icon" href="/assets/icons/brand.png" />
+    <link rel="stylesheet" href="/libs/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="/styles/global.css" />
     <link rel="stylesheet" href="/styles/product.css">
   </head>
@@ -421,6 +422,154 @@
             </div>
           </div>
         </section>
+        <section class="best-selling-products-in-this-category">
+          <h4>کالا های پرفروش در این دسته بندی</h4>
+          <div class="products">
+            <div class="swiper swiper-products sp-1">
+              <div class="swiper-button-prev"></div>
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <div class="product-card">
+                    <a class="special" href="#product">
+                      <div class="row-1">
+                        <img src="/assets/images/croma.png" alt="">
+                      </div>
+                      <div class="row-2">
+                        <h5>هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش، مشکی)</h5>
+                        <div class="rate">
+                          <span class="rate-number">۵</span>
+                          <img src="/assets/icons/star.png" alt="">
+                        </div>
+                        <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="product-card">
+                    <a class="special" href="#product">
+                      <div class="row-1">
+                        <img src="/assets/images/croma.png" alt="">
+                      </div>
+                      <div class="row-2">
+                        <h5>هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش، مشکی)</h5>
+                        <div class="rate">
+                          <span class="rate-number">۵</span>
+                          <img src="/assets/icons/star.png" alt="">
+                        </div>
+                        <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="product-card">
+                    <a class="special" href="#product">
+                      <div class="row-1">
+                        <img src="/assets/images/croma.png" alt="">
+                      </div>
+                      <div class="row-2">
+                        <h5>هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش، مشکی)</h5>
+                        <div class="rate">
+                          <span class="rate-number">۵</span>
+                          <img src="/assets/icons/star.png" alt="">
+                        </div>
+                        <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="product-card">
+                    <a class="special" href="#product">
+                      <div class="row-1">
+                        <img src="/assets/images/croma.png" alt="">
+                      </div>
+                      <div class="row-2">
+                        <h5>هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش، مشکی)</h5>
+                        <div class="rate">
+                          <span class="rate-number">۵</span>
+                          <img src="/assets/icons/star.png" alt="">
+                        </div>
+                        <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="product-card">
+                    <a class="special" href="#product">
+                      <div class="row-1">
+                        <img src="/assets/images/croma.png" alt="">
+                      </div>
+                      <div class="row-2">
+                        <h5>هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش، مشکی)</h5>
+                        <div class="rate">
+                          <span class="rate-number">۵</span>
+                          <img src="/assets/icons/star.png" alt="">
+                        </div>
+                        <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="product-card">
+                    <a class="special" href="#product">
+                      <div class="row-1">
+                        <img src="/assets/images/croma.png" alt="">
+                      </div>
+                      <div class="row-2">
+                        <h5>هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش، مشکی)</h5>
+                        <div class="rate">
+                          <span class="rate-number">۵</span>
+                          <img src="/assets/icons/star.png" alt="">
+                        </div>
+                        <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="product-card">
+                    <a class="special" href="#product">
+                      <div class="row-1">
+                        <img src="/assets/images/croma.png" alt="">
+                      </div>
+                      <div class="row-2">
+                        <h5>هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش، مشکی)</h5>
+                        <div class="rate">
+                          <span class="rate-number">۵</span>
+                          <img src="/assets/icons/star.png" alt="">
+                        </div>
+                        <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="product-card">
+                    <a class="special" href="#product">
+                      <div class="row-1">
+                        <img src="/assets/images/croma.png" alt="">
+                      </div>
+                      <div class="row-2">
+                        <h5>هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش، مشکی)</h5>
+                        <div class="rate">
+                          <span class="rate-number">۵</span>
+                          <img src="/assets/icons/star.png" alt="">
+                        </div>
+                        <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-button-next"></div>
+              <div class="swiper-pagination"></div>
+            </div>
+          </div>
+        </section>
       </main>
       <footer>
         <div class="side-right">
@@ -447,6 +596,7 @@
         </div>
       </footer>
     </div>
+    <script src="/libs/swiper/swiper-bundle.min.js"></script>
     <script src="/scripts/global.js"></script>
     <script src="/scripts/product.js"></script>
   </body>
