implemented the products page

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
           </a>
         </div>
         <div class="navbar">
-          <a href="#home">
+          <a href="/">
             <img src="/assets/icons/house.png" alt="">
             <span>خانه</span>
           </a>
-          <a href="#products">
+          <a href="/pages/products.html">
             <img src="/assets/icons/product.png" alt="">
             <span>محصولات</span>
           </a>
@@ -136,7 +136,7 @@
                 <img src="/assets/icons/house.png" alt="">
                 <span>خانه</span>
               </a>
-              <a href="#products">
+              <a href="/pages/products.html">
                 <img src="/assets/icons/product.png" alt="">
                 <span>محصولات</span>
               </a>
