--- a/pages/favorites.html
+++ b/pages/favorites.html
@@ -43,7 +43,7 @@
             <img src="/assets/icons/house.png" alt="">
             <span>خانه</span>
           </a>
-          <a href="#products">
+          <a href="/pages/products.html">
             <img src="/assets/icons/product.png" alt="">
             <span>محصولات</span>
           </a>
