implemented the register page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
       <div class="section-2">
         <div class="auth-links">
-          <a href="#register">ثبت نام</a>
+          <a href="/pages/register.html">ثبت نام</a>
           <a href="#login">ورود</a>
         </div>
         <div class="action-links">
@@ -123,7 +123,7 @@
             </div>
             <span class="vertical-line"></span>
             <div class="auth-links">
-              <a class="auth-link" href="#register">ثبت نام</a>
+              <a class="auth-link" href="/pages/register.html">ثبت نام</a>
               <a class="auth-link" href="#login">ورود</a>
             </div>
           </div>
