--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="section-2">
         <div class="auth-links">
           <a href="/pages/register.html">ثبت نام</a>
-          <a href="#login">ورود</a>
+          <a href="/pages/login.html">ورود</a>
         </div>
         <div class="action-links">
           <a href="#cart">
@@ -124,7 +124,7 @@
             <span class="vertical-line"></span>
             <div class="auth-links">
               <a class="auth-link" href="/pages/register.html">ثبت نام</a>
-              <a class="auth-link" href="#login">ورود</a>
+              <a class="auth-link" href="/pages/login.html">ورود</a>
             </div>
           </div>
         </div>
